# xla-rs

./: Cargo.toml  build.rs
examples/: loop.rs
src/: c_lib.rs  lib.rs
src/wrappers/: mod.rs  xla_builder.rs  xla_op.rs
tests/: basic_tests.rs
xla_rs/: xla_rs.cc  xla_rs.h
